[package]
name = "pine_ws"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
pine_ipc = { git = "https://github.com/entriphy/pine-rs" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_with = { version = "3.8.3", features = ["base64"] }
tungstenite = "0.23.0"

[build-dependencies]
vergen = "0.1.1"