[package]
name = "pine_ws"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
pine-ipc = "1.0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["base64"] }
tungstenite = "0.26.2"